kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wisecowtestplat
  labels:
    app: wisecowtestplat
spec:
  replicas: 3
  selector:
    matchLabels:
      app: wisecowtestplat
  template:
    metadata:
      labels:
        app: wisecowtestplat
    spec:
      containers:
      - name: wisecowtestplat
        image: spicycriminal43/testing-wisecow
        ports:
        - containerPort: 4499
