kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecowtestplat
spec:
  selector:
    app: wisecowtestplat
  ports:
    - protocol: TCP
      port: 4499
      targetPort: 4499
