kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecowtestplat
spec:
  ingressClassName: wisecowtestplat
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wisecowtestplat
            port:
              number: 4499
